# My-Network

./: CMakeLists.txt  MyGraphic.cpp  MyGraphic.h  Network.cpp  Network.h  Picture.cpp  Picture.h  README.md  SmartPaint.cpp  SmartPaint.h  application.exe.ppdb  main.cpp  test.cpp
include/: SmartPaint.h
networks/: 2_gen_1.txt  2_gen_10.txt  2_gen_11.txt  2_gen_12.txt  2_gen_2.txt  2_gen_3.txt  2_gen_4.txt  2_gen_5.txt  2_gen_6.txt  2_gen_7.txt  2_gen_8.txt  2_gen_9.txt  magic.txt  network_1.txt  network_10.txt  network_11.txt  network_12.txt  network_13.txt  network_14.txt  network_2.txt  network_3.txt  network_4.txt  network_5.txt  network_6.txt  network_7.txt  network_8.txt  network_9.txt  result.txt
networks/3_gen/: 1.txt  test.txt  training.txt
networks/4_gen/: final_result.txt  global_error.txt  ntwrk.txt  training_result.txt
networks/5_gen/: final_result.txt  global_error.txt  ntwrk.txt  training_result.txt
networks/6_gen/: final_result.csv  global_error.csv  graph.csv  ntwrk.txt  training_result.csv
networks/7_gen/: ntwrk.txt
networks/network_0/: weights_to_network.txt
networks/network_0/result/: final_result.csv  global_error.csv  training_result.csv
networks/network_10/: weights_to_network.txt
networks/network_10/result/: final_result.csv  global_error.csv  training_result.csv
networks/network_16_16/: weights_to_network.txt
networks/network_16_16_16/: weights_to_network.txt
networks/network_20_10/: weights_to_network.txt
networks/network_28_14/: weights_to_network.txt
src/: Picture.cpp  SmartPaint.cpp  main.cpp
(+12 files in other folders)
